--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
     <link rel="stylesheet" href="formatacao.css">
     <link rel="stylesheet" href="estilos/media-query.css">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6QLHHPTEFS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-6QLHHPTEFS');
+</script>
 <header>
   <!--INICIO NAVBAR BOOTSTRAP-->
   <nav class="navbar navbar-dark bg-dark fixed-top">
