Update index.html search console
Adicionando o código do search console

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
   gtag('config', 'G-6QLHHPTEFS');
 </script>
+google-site-verification: googlee4fe97d273ce369f.html
 <header>
   <!--INICIO NAVBAR BOOTSTRAP-->
   <nav class="navbar navbar-dark bg-dark fixed-top">
