--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Universo Literário & Cinematográfico</title>
     <link rel="shortcut icon" href="imagens/favicon.jpg" type="image/x-icon">
-    
+    <meta name="google-site-verification" content="DUcXtERypD15t9mkCGlJOaLi9Brz6JTOJrojpSV8unw" />
     <!--LINK CSS BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     </head>
