--- a/naves/contatos.html
+++ b/naves/contatos.html
@@ -33,7 +33,7 @@
     <footer class="footer">
         <div class="rodape">
             <p class="para">Todos os Direitos Reservados</p>
-            <p>Site criado por Wanderson Souza. Dono e CEO da Corporação WSF. Em: 02/03/2023</p>
+            <p>Site criado por Wanderson Souza. Dono e CEO da Corporação WSF. Em: 2024</p>
         </div>
     </footer>
 
