--- a/naves/series.html
+++ b/naves/series.html
@@ -444,7 +444,7 @@
 
             <div class="col-md-4 col-xs-12 bordas">
               <h4 class="color">Endereço</h4>
-              <p class="colorwhite">Atualmente me encontro privado de liberdade na APAC de Santa Luzia-MG.</p>
+              <p class="colorwhite">Santa Luzia-MG.</p>
             </div>
 
             <div class="col-md-4 col-xs-12 bordas">
