--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Universo Literário & Cinematográfico</title>
     <link rel="shortcut icon" href="imagens/favicon.jpg" type="image/x-icon">
-    <meta name="google-site-verification" content="DUcXtERypD15t9mkCGlJOaLi9Brz6JTOJrojpSV8unw" />
+    
     <!--LINK CSS BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     </head>
@@ -16,16 +16,7 @@
     <link rel="stylesheet" href="formatacao.css">
     <link rel="stylesheet" href="estilos/media-query.css">
 </head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-6QLHHPTEFS"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-6QLHHPTEFS');
-</script>
-google-site-verification: googlee4fe97d273ce369f.html
 <header>
   <!--INICIO NAVBAR BOOTSTRAP-->
   <nav class="navbar navbar-dark bg-dark fixed-top">
@@ -104,6 +95,7 @@ google-site-verification: googlee4fe97d273ce369f.html
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
               </div>
               <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -124,6 +116,13 @@ google-site-verification: googlee4fe97d273ce369f.html
                   <a href="resenhas/aRaiz.html"><img src="imagens/a raiz da rejeiçao.png" class="d-block w-100" alt="..."></a>
                   <div class="carousel-caption d-none d-md-block" style="color: black;">
                     <h3>A Raiz da Rejeição</h3>
+                    <p>Um livro para se apreciar...</p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <a href="resenhas/oSimboloPerdido.html"><img src="imagens/o-simbolo-perdido.png" class="d-block w-100" alt="..."></a>
+                  <div class="carousel-caption d-none d-md-block" style="color: black;">
+                    <h3>O Símbolo Perdido</h3>
                     <p>Um livro para se apreciar...</p>
                   </div>
                 </div>
