--- a/resenhas/oSimboloPerdido.html
+++ b/resenhas/oSimboloPerdido.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Tag do Google Analytics-->
+    <!--Fim Tag do Google Analytics-->
     <title>O Símbolo Perdido</title>
     <link rel="stylesheet" href="livrosIndividuais.css">
     <link rel="stylesheet" href="impressora.css" media="print">
