--- a/naves/sobre.html
+++ b/naves/sobre.html
@@ -33,7 +33,7 @@
         <p>Então, seja bem-vindo ao meu mundo. Vamos juntos explorar as possibilidades infinitas que a tecnologia nos oferece e inspirar uns aos outros a alcançar grandes feitos.</p>
         <br>
         <h3>Dedicatórias</h3>
-        <p>Agradeço ao Senhor Jesus por todo amor e carinho!! E por toda inteligência que tem me concedido. E dedico em especial esse site a minha mãe Marizete Souza por sempre agreditar em mim e estar sempre ao meu lado. Te amo!!</p>
+        <p>Agradeço ao Senhor Jesus por todo amor e carinho!! E por toda inteligência que tem me concedido. E dedico em especial esse site a minha mãe Marizete Souza por sempre acreditar em mim e estar sempre ao meu lado. Te amo!!</p>
       </div>
     </main>
     <footer>
